--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "body-parser": "^1.20.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.9.0"
+    "routing-controllers": "^0.9.0",
+    "typedi": "^0.10.0"
   }
 }
