--commit: Controllers with DB configured--

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,7 @@
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
