--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
