--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
