--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "buffer": "^6.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ethereumjs-util": "^7.1.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "web3": "^1.8.1"
   }
 }
