--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "buffer": "^6.0.3",
